--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
             - mydb
         environment: 
             NODE_ENV: development
+            DATABASE_HOST: mydb
+            DATABASE_PORT: 3306
+            DATABASE_USER: root
+            DATABASE_PASS: password
+            DATABASE_NAME: nestapp
         ports:
             - "5000:5000"
         networks:
