--- a/config/env/development.env
+++ b/config/env/development.env
@@ -3,6 +3,12 @@ PORT=5000
 FRONTEND_HOST=http://localhost:3000
 
 
+DATABASE_HOST: localhost
+DATABASE_PORT: 3306
+DATABASE_USER: root
+DATABASE_PASS: password
+DATABASE_NAME: nestapp
+
 
 MAIL_USER=postmaster@sandboxbc84f0205be042b9bf1cb86401b4110e.mailgun.org
 MAIL_PASS=30287afb9c30298f30420430086a0a0b-1b8ced53-b819689a
@@ -10,3 +16,6 @@ MAIL_FROM=hihocar768@jybra.com
 
 JWT_SECRET=hja$n&bdf/jHGgdg12
 JWT_EXPIRES_IN='1 days'
+
+GOOGLE_CLIENT_ID=546109671575-e0s310hf2lmtb6kihipsj6b682ii460d.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
