--- a/config/env/development.env
+++ b/config/env/development.env
@@ -19,3 +19,6 @@ JWT_EXPIRES_IN='1 days'
 
 GOOGLE_CLIENT_ID=546109671575-e0s310hf2lmtb6kihipsj6b682ii460d.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+MICROSOFT_CLIENT_ID=00b77330-9838-43d1-bb79-036ce96126ec
+MICROSOFT_CLIENT_SECRET=1c9de3b1-00b3-4baa-a887-d2a9a843175a
