--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-microsoft": "^1.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -41,6 +42,7 @@
     "mysql2": "^3.6.2",
     "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^1.0.0",
     "reflect-metadata": "^0.1.13",
